Fixed issue with secondary nav where nav items were overlapping on mobile

--- a/web/app/themes/the-heights-fellowship/resources/assets/styles/layouts/_header.scss
+++ b/web/app/themes/the-heights-fellowship/resources/assets/styles/layouts/_header.scss
@@ -388,11 +388,15 @@ header.banner {
       display: block;
       position: relative;
       list-style: none;
-      width: 60%;
+      width: 100%;
       padding: 0;
       margin: 0;
       overflow: hidden;
       white-space: nowrap;
+
+      @media (min-width: $breakpoint-tablet) {
+        width: 60%;
+      }
 
       @media (min-width: $breakpoint-desktop) {
         display: flex;
